<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".auth.RegisterActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/ll_new_user_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/new_user_start_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_talinor_logo"
        android:gravity="center"
        />

      <TextView
        android:id="@+id/txt_new_user_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/new_user_title"
        android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/ll_new_user_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/ll_new_user_title"
      android:orientation="vertical">

      <EditText
        android:id="@+id/et_first_name"
        style="@style/TextEdit_new_user"
        android:hint="@string/new_user_first_name"/>

      <EditText
        android:id="@+id/et_second_name"
        style="@style/TextEdit_new_user"
        android:hint="@string/new_user_last_name"/>

      <EditText
        android:id="@+id/et_company_name"
        style="@style/TextEdit_new_user"
        android:hint="@string/new_user_company_name"/>

      <EditText
        android:id="@+id/et_email"
        style="@style/TextEdit_new_user"
        android:inputType="textEmailAddress"
        android:hint="@string/new_user_email"/>

      <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        style="@style/TextEdit_new_user"
        android:hint="@string/new_password"/>

      <EditText
        android:id="@+id/et_phone_number"
        style="@style/TextEdit_new_user"
        android:inputType="phone"
        android:hint="@string/new_user_phone_number"/>
    </LinearLayout>

    <TableLayout
      android:id="@+id/new_user_table"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/ll_new_user_info"
      android:shrinkColumns="0,1,2,3"
      android:stretchColumns="0,1,2,3"

      android:weightSum="0.8">

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
          android:id="@+id/btn_new_user_send_info"
          style="@style/BtnNewUserScreenStyle"
          android:layout_column="0"
          android:layout_span="4"
          android:text="@string/new_user_send_info_btn"/>
      </TableRow>
    </TableLayout>

    <TextView
      android:id="@+id/tv_new_user_APK_Version"
      style="@style/apk_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_below="@id/new_user_table"
      android:text="@string/app_version"/>


  </RelativeLayout>
</ScrollView>